test: server, xml processor, client handler feat: scripts to run app