@@ -3,8 +3,10 @@ package com.github.diszexuf.server;
 import java.io.*;
 import java.net.*;
 import java.nio.file.*;
+import java.util.Collections;
 import java.util.Set;
 import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
 public class Server {
 
@@ -12,7 +14,7 @@ public class Server {
     private static final String BANNED_WORDS_FILE = "banned_words.txt";
 
     public static void main(String[] args) {
-        Set<String> bannedWords = loadBannedWords();
+        Set<String> bannedWords = loadBannedWords(Path.of(BANNED_WORDS_FILE));
         System.out.println("[Server] Запуск на порту " + PORT);
 
         try (ServerSocket serverSocket = new ServerSocket(PORT)) {
@@ -28,20 +30,18 @@ public class Server {
         }
     }
 
-    private static Set<String> loadBannedWords() {
-        Path path = Path.of(BANNED_WORDS_FILE);
+    static Set<String> loadBannedWords(Path path) {
         if (!Files.exists(path)) {
-            System.out.println("[Server] banned_words.txt не найден.");
-            return Set.of();
+            System.out.println("[Server] banned_words.txt не найден");
+            return Collections.emptySet();
         }
-        try {
-            return Files.lines(path)
+        try (Stream<String> lines = Files.lines(path)) {
+            return lines
                     .map(String::trim)
-                    .filter(s -> !s.isEmpty())
-                    .collect(Collectors.toSet());
+                    .filter(s -> !s.isEmpty()).collect(Collectors.toUnmodifiableSet());
         } catch (IOException e) {
             System.err.println("[Server] Ошибка чтения banned_words.txt");
-            return Set.of();
+            return Collections.emptySet();
         }
     }
 }
